The Samba-Bugzilla – Bug 14357
READ_CONTROL_ACCESS mustn't break leases
Last modified: 2020-05-13 06:52:01 UTC
Home
|
New
|
Browse
|
Search
|
[?]
|
Reports
|
Requests
|
Help
|
New Account
|
Log In
[x]
|
Forgot Password
Login:
[x]
Bug 14357
-
READ_CONTROL_ACCESS mustn't break leases
Summary:
READ_CONTROL_ACCESS mustn't break leases
Status
:
ASSIGNED
Alias:
None
Product:
Samba 4.1 and newer
Classification:
Unclassified
Component:
File services (
show other bugs
)
Version:
unspecified
Hardware:
All All
I
mportance
:
P5 normal
(
vote
)
Target Milestone:
---
Assignee:
Ralph Böhme
QA Contact:
Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
Reported:
2020-04-27 16:00 UTC by
Ralph Böhme
Modified:
2020-05-13 06:52 UTC (
History
)
CC List:
1 user
(
show
)
jonessyue
See Also:
https://gitlab.com/samba-team/samba/-/merge_requests/1299
Attachments
Add an attachment
(proposed patch, testcase, etc.)
Note
You need to
log in
before you can comment on or make changes to this bug.
Description
Ralph Böhme
2020-04-27 16:00:27 UTC
https://lists.samba.org/archive/cifs-protocol/2020-March/003409.html
Have patch, need bugnumber.
Format For Printing
-
XML
-
Clone This Bug
-
Top of page